--- a/app/assets/stylesheets/navigation/_nav-sections.scss
+++ b/app/assets/stylesheets/navigation/_nav-sections.scss
@@ -19,10 +19,11 @@
 }
 
 .nav-sections__headline {
+	@extend %roboto_bold;
 	margin-bottom: 10px;
 	text-align: center;
 	font-weight: 400;
-	font-size: 24px;
+	font-size: 18px;
 }
 
 .nav-sections__listitem {
