Testing new hover styles and "beige" color

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -10,7 +10,7 @@
 $brand_yellow: #F4B528;
 $brand_green: #8CBD86;
 $brand_brown: #41311A;
-$brand_beige: #F2F2E2;
+$brand_beige: #f6eedc;
 $brand_white: #FFF;
 $brand_orange: #F78300;
 $brand_blue: #87A6AE;
