--- a/app/assets/stylesheets/modules/sections/_section-offer.scss
+++ b/app/assets/stylesheets/modules/sections/_section-offer.scss
@@ -11,8 +11,8 @@
 		background: $brand_green;
 	}
 
-	.section-content--nextsteps .section-content__title  {
-		background: $brand_orange;
+	.section-content--where .section-content__title  {
+		background: $brand_brown;
 	}
 
 	.section-content--tags {
@@ -32,6 +32,7 @@
 
 		img {
 			height: 60px;
+			margin-left: 10px;
 		}
 	}
 
