--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -12,7 +12,7 @@ footer.footer-main
           a.Social-media__item.Social-media__item--facebook Facebook
 
       .footer-main__about
-        .Illustration-clara-t.Illustration-clara-t--scooter
+        .mascot.mascot--footer
 
         nav.nav-site
           ul.nav-site__list
