--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 @import "modules/claim";
 @import "modules/distributor";
 @import "modules/social-media";
-@import "modules/illustration-clara-t";
+@import "modules/mascot";
 @import "modules/listing-results";
 @import "modules/listing-tags";
 @import "modules/listing-offers";
