--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,7 @@
 @import "navigation/nav-sections";
 @import "navigation/nav-site";
 @import "navigation/nav-legal";
+@import "navigation/pagination";
 
 @import "vendor/twitter-typeahead_override";
 
