Add basic sketch of generic text page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,7 @@
 @import "modules/sections/section-start";
 @import "modules/sections/section-offer";
 @import "modules/sections/section-organisation";
+@import "modules/sections/section-team";
 
 @import "form/base";
 @import "form/main-search";
