--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -42,13 +42,14 @@ html class='no-js' lang=I18n.locale
     = csrf_meta_tags
 
   body class="template--#{controller_name}-#{action_name}"
-    - flash.each do |message|
-      div class="alert alert-#{message[0]} fade in"= message[1]
+    .page-wrap
+      - flash.each do |message|
+        div class="alert alert-#{message[0]} fade in"= message[1]
 
-    - if controller_name == 'pages' && action_name == 'home'
-      = render 'layouts/partials/navigation', search_cache: @search_cache
-    - else
-      = render 'layouts/partials/search_navigation', search_cache: @search_cache
-    = yield
-    = content_for :view_specific_scripts
+      - if controller_name == 'pages' && action_name == 'home'
+        = render 'layouts/partials/navigation', search_cache: @search_cache
+      - else
+        = render 'layouts/partials/search_navigation', search_cache: @search_cache
+      = yield
+      = content_for :view_specific_scripts
     = render 'layouts/partials/footer'
