Fix contribution button across offer and organisation show view

--- a/app/assets/stylesheets/modules/_listing-tags.scss
+++ b/app/assets/stylesheets/modules/_listing-tags.scss
@@ -5,6 +5,7 @@
 // ---------------------------------------------------------------
 
 .Listing-tags {
+	@extend %clearfix;
 	margin: 0;
 	padding: 0;
 	list-style: none;
