--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -38,13 +38,13 @@
 	@extend %layout-col-35;
 }
 
-body[class^="template--pages"] {
-	.content-main {
-		 .wrapper-inner {
-			 padding: 30px 0;
-		 }
-	}
- }
+//body[class^="template--pages"] {
+//	.content-main {
+//		 .wrapper-inner {
+//			 padding: 30px 0;
+//		 }
+//	}
+// }
 
 // Sticky footer related
 
