Add basic styling of popups

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@
 @import "modules/listing-tags";
 @import "modules/listing-offers";
 @import "modules/map";
+@import "modules/popup-content";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
@@ -42,6 +43,7 @@
 @import "navigation/pagination";
 
 @import "vendor/twitter-typeahead_override";
+@import "vendor/formtastic";
 
 
 
