--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -1,4 +1,4 @@
-header.header-main.header-main--startpage
+header.header-main.header-main--wide
   .header-main__foreground.wrapper-inner
     h1.Logo.Logo--start = link_to "clarat.org", '/'
 
@@ -9,21 +9,23 @@ header.header-main.header-main--startpage
   .header-main__stage
     / Optional stage for animations
 
-.Distributor.Distributor--start
-  .wrapper-inner
-    = render '/offers/shared/search_form', search_cache: search_cache
+- if controller_name == 'pages' && action_name == 'home'
 
-    nav.nav-sections
-      h3.nav-sections__headline Oder suche nach Kategorien:
+  .Distributor.Distributor--start
+    .wrapper-inner
+      = render '/offers/shared/search_form', search_cache: search_cache
 
-      ul.nav-sections__list
-        li.nav-sections__listitem.nav-sections__listitem--crisis
-          a Akute Krisen
-        li.nav-sections__listitem.nav-sections__listitem--learn
-          a Lernen
-        li.nav-sections__listitem.nav-sections__listitem--family
-          a Familie
-        li.nav-sections__listitem.nav-sections__listitem--health
-          a Gesundheit
-        li.nav-sections__listitem.nav-sections__listitem--residing
-          a Wohnen
+      nav.nav-sections
+        h3.nav-sections__headline Oder suche nach Kategorien:
+
+        ul.nav-sections__list
+          li.nav-sections__listitem.nav-sections__listitem--crisis
+            a Akute Krisen
+          li.nav-sections__listitem.nav-sections__listitem--learn
+            a Lernen
+          li.nav-sections__listitem.nav-sections__listitem--family
+            a Familie
+          li.nav-sections__listitem.nav-sections__listitem--health
+            a Gesundheit
+          li.nav-sections__listitem.nav-sections__listitem--residing
+            a Wohnen
