Add basic mediaquery structure

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,8 +42,11 @@
 @import "navigation/nav-legal";
 @import "navigation/pagination";
 
+@import "mediaqueries/config";
+
 @import "vendor/twitter-typeahead_override";
 @import "vendor/formtastic";
+
 
 
 
