--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -17,9 +17,9 @@ footer.footer-main
         nav.nav-site
           ul.nav-site__list
             li.nav-site__listitem
-              = link_to 'Über uns', '/about'
+              = link_to 'Über uns', '/ueber-uns'
             li.nav-site__listitem
-              = link_to 'Häufige Fragen', '/faq'
+              = link_to 'Häufige Fragen', '/haeufige-fragen'
             li.nav-site__listitem
               = link_to 'Kontakt', '#'
   section.footer-main__secondrow
