Germanize more URLs

--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -29,6 +29,6 @@ footer.footer-main
           li.nav-legal__listitem
             = link_to 'Impressum', '/impressum'
           li.nav-legal__listitem
-            = link_to 'Nutzungsbedingungen', '/agb'
+            = link_to 'Nutzungsbedingungen', '/nutzungsbedingungen'
           li.nav-legal__listitem
-            = link_to 'Datenschutzerklärung', '/privacy'
+            = link_to 'Datenschutzerklärung', '/datenschutzerklaerung'
