--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -28,15 +28,18 @@
                 li
                   = "#{opening.day}: #{opening.open.strftime("%H:%M")} - #{opening.close.strftime("%H:%M")}"
 
-      section.section-content.section-content--contact
-        h3.section-content__title Kontakt
-        .section-content__body
-          p
-            == "Ansprechpartner: #{@offer.contact_name}<br>" if @offer.contact_name?
-            == "Telefon: #{@offer.telephone}<br>" if @offer.telephone?
-            == "Fax: #{@offer.fax}<br>" if @offer.fax?
-            == "E-Mail: #{@offer.email}" if @offer.email?
-            / mailto:!!
+      - if @offer.has_contact_details?
+        / ^ modify that method if you add information to this box
+        section.section-content.section-content--contact
+          h3.section-content__title Kontakt
+          .section-content__body
+            p
+              == "Ansprechpartner: #{@offer.contact_name}<br>" if @offer.contact_name?
+              == "Telefon: #{@offer.telephone}<br>" if @offer.telephone?
+              == "Fax: #{@offer.fax}<br>" if @offer.fax?
+              - if @offer.email?
+                | E-Mail:
+                ==< secure_email_to @offer.email
 
 
       section.section-content.section-content--organisation
