--- a/app/assets/stylesheets/modules/sections/_section-content.scss
+++ b/app/assets/stylesheets/modules/sections/_section-content.scss
@@ -53,6 +53,7 @@
 
 .offer-contribute {
 	@extend %clarat_rounding_end;
+	@extend %roboto_regular;
 	text-align: left;
 	background: transparent;
 	color: $brand_brown;
