--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -40,7 +40,17 @@
               - if @offer.email?
                 | E-Mail:
                 ==< secure_email_to @offer.email
-
+              br
+              / ToDo: Refactor!
+              | Webseite:
+              =< link_to "#{@offer.websites.own.first.url}", "#{@offer.websites.own.first.url}" if @offer.websites.own.first
+              br
+              == "Weitere Präsenzen im Netz: "
+              ==> link_to 'Facebook', "#{@offer.websites.facebook.first.url}" if @offer.websites.facebook.first
+              ==> link_to 'Twitter', "#{@offer.websites.twitter.first.url}" if @offer.websites.twitter.first
+              ==> link_to 'Youtube', "#{@offer.websites.youtube.first.url}" if @offer.websites.youtube.first
+              ==> link_to 'Google+', "#{@offer.websites.gplus.first.url}" if @offer.websites.gplus.first
+              ==> link_to 'Pinterest', "#{@offer.websites.pinterest.first.url}" if @offer.websites.pinterest.first
 
       section.section-content.section-content--organisation
         h3.section-content__title Anbieter
