disable scroll wheel for gmaps

--- a/app/assets/javascripts/gmaps_search_results.coffee.erb
+++ b/app/assets/javascripts/gmaps_search_results.coffee.erb
@@ -12,6 +12,7 @@ initialize = ->
     mapOptions =
       zoom: 11
       center: userPosition
+      scrollwheel: false
 
     # Create Map and Center to User Position
     map = new google.maps.Map(canvas, mapOptions)
