fix more tags display

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "base/header";
 @import "base/footer";
 @import "base/aside";
+@import "base/states";
 
 @import "modules/logo";
 @import "modules/claim";
