--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,8 @@ html class='no-js' lang=I18n.locale
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
     | <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
+    = javascript_include_tag "vendor/modernizr.custom.js"
+
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = render '/layouts/partials/javascript_config'
 
@@ -19,6 +21,7 @@ html class='no-js' lang=I18n.locale
     link rel="Shortcut Icon" href="favico.ico" type="image/x-icon"
     link rel="apple-touch-icon-precomposed" sizes="144x144" href=""
     meta name="msapplication-TileImage" content=""
+
 
     |     <!--[if lt IE 9]>
     |       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
