--- a/app/assets/stylesheets/modules/sections/_section-start.scss
+++ b/app/assets/stylesheets/modules/sections/_section-start.scss
@@ -51,6 +51,7 @@
 }
 
 .section-start__body {
+	@extend %clarat_rounding_end;
 	padding: 26px 30px 52px;
 	min-height: 290px;
 	background: $brand_beige;
