Add basic responsive behaviour of claim, Distributor, header, main wrappers

--- a/app/assets/stylesheets/base/_footer.scss
+++ b/app/assets/stylesheets/base/_footer.scss
@@ -4,6 +4,12 @@
 //
 // ---------------------------------------------------------------
 
+.footer-main {
+	.hasStickySidebar & {
+		padding-top: 100px;
+	}
+}
+
 .footer-main,
 .footer-main__firstrow,
 .footer-main__secondrow {
