--- a/app/assets/stylesheets/base/_aside.scss
+++ b/app/assets/stylesheets/base/_aside.scss
@@ -3,6 +3,9 @@
 //  Common styles in aside and containers
 //
 // ---------------------------------------------------------------
+.aside-standard {
+	transition: top 0.33s
+}
 
 .aside-standard__headline {
 	font-weight: 400;
