Fix: pagination navigation, moving it to vendors folder

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,7 @@
 @import "navigation/nav-sections";
 @import "navigation/nav-site";
 @import "navigation/nav-legal";
-@import "navigation/pagination";
+@import "vendor/pagination";
 
 @import "mediaqueries/config";
 
