--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -3,6 +3,10 @@
     header.page-detail__header
       h2.page-detail__title= @offer.name
       .page-detail__icons
+        - @offer.tags.mains.each do |main_tag|
+          .FORMARCUS class="FORMARCUS--#{main_tag.icon}"
+        / above will be one or multiple of: a-crisis, b-learn, c-family, d-health, e-habitation
+        / when finished, delete this comments and these two images:
         = image_tag "picto_family.svg", alt: ""
         = image_tag "picto_crisis.svg", alt: ""
 
