Add media query name indicator for debug

--- a/app/assets/stylesheets/mediaqueries/_config.scss
+++ b/app/assets/stylesheets/mediaqueries/_config.scss
@@ -19,6 +19,20 @@
 	}
 }
 
+@mixin mqindicator($mqname) {
+	body:before {
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 1000 !important;
+		display: inline-block;
+		padding: 5px 10px;
+		background: red;
+		color: #fff;
+		content: $mqname;
+	}
+}
+
 @import "xl";
 @import "l";
 @import "m";
