--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -1,7 +1,7 @@
-/ = semantic_form_for search_cache, url: offers_path, html: { method: :get } do |f|
-/   = f.input :query, label: true, input_html: { placeholder: 'Suche Angebote...', spellcheck: false, autocomplete: 'off', autofocus: true, class: 'input-xlg typeahead' }
-/   = f.input :search_location, label: true, input_html: { value: geoloc_to_s, class: 'input-xlg JS-Search-location-display', placeholder: 'in...' }
-/   = f.input :generated_geolocation, as: :hidden, input_html: { class: 'JS-Search-location', value: default_geolocation }
-/   = f.input :tags, as: :hidden
-/   button.main-search__submit
+= semantic_form_for search_cache, url: offers_path, html: { method: :get } do |f|
+  = f.input :query, label: true, input_html: { placeholder: 'Suche Angebote...', spellcheck: false, autocomplete: 'off', autofocus: true, class: 'input-xlg typeahead' }
+  = f.input :search_location, label: true, input_html: { value: geoloc_to_s, class: 'input-xlg JS-Search-location-display', placeholder: 'in...' }
+  = f.input :generated_geolocation, as: :hidden, input_html: { class: 'JS-Search-location', value: default_geolocation }
+  = f.input :tags, as: :hidden
+  button.main-search__submit
 
