Small refactor of mediaqueries for better overview

--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -6,32 +6,9 @@
 
 @include breakpoint(L) {
 
-	@include mqindicator('L');
-	.header-main--wide {
-		height: 375px;
-	}
+	@include mqindicator('L'); // debug, @TODO: comment
 
-	.newsletter-subscribe {
-		// @TODO: smaller fonts
-	}
-
-	.nav-sections {
-		//@TODO: Smaller pictos
-	}
-
-	.mascot--header {
-		display: none;
-	}
-
-	.section-wrapper-major,
-	.section-wrapper-minor,
-	.content-main,
-	.aside-standard {
-		display: block;
-		float: none;
-		margin-right: 0;
-		width: auto;
-	}
+	// Header ######################################
 
 	.header-main {
 		&:before {
@@ -39,40 +16,8 @@
 		}
 	}
 
-	.section-start {
-		margin: 0 0 20px;
-		width: auto;
-	}
-
-
-	.section-start__body {
-		min-height: 0;
-	}
-
-	.Distributor--start {
-		@extend %clearfix;
-		margin-bottom: 50px;
-		height: auto;
-	}
-
-	.Distributor {
-		width: 480px;
-		max-width: 480px;
-		margin-right: -25px;
-	}
-
-	.Distributor--start {
-		width: 100%;
-		max-width: 100%;
-	}
-
-	#new_search_form {
-		width: 100%;
-	}
-
-	#search_form_query,
-	#search_form_search_location {
-		width: 170px;
+	.header-main--wide {
+		height: 375px;
 	}
 
 	.Claim {
@@ -87,12 +32,31 @@
 		font-size: 18px;
 	}
 
-	.nav-sections {
-		padding: 0;
+	.mascot--header {
+		display: none;
 	}
 
-	.content-main {
-		padding-bottom: 0;
+	.Distributor--start {
+		@extend %clearfix;
+		margin-bottom: 50px;
+		height: auto;
+		max-width: 100%;
+		width: 100%;
+	}
+
+	.Distributor {
+		margin-right: -25px;
+		max-width: 480px;
+		width: 480px;
+	}
+
+	#new_search_form {
+		width: 100%;
+	}
+
+	#search_form_query,
+	#search_form_search_location {
+		width: 170px;
 	}
 
 	.template--pages-home {
@@ -101,21 +65,25 @@
 		}
 	}
 
-	.section-team__member {
-		width: 49.5%;
 
-		&:nth-child(2n+1) {
-			margin-right: 0;
-		}
+	// Content ######################################
+
+	.section-wrapper-major,
+	.section-wrapper-minor,
+	.content-main,
+	.aside-standard {
+		display: block;
+		float: none;
+		margin-right: 0;
+		width: auto;
 	}
 
-	.footer-main__firstrow {
-		height: auto;
-		padding-bottom: 20px;
+	.content-main {
+		padding-bottom: 0;
 	}
 
-	.newsletter-subscribe__submit {
-		width: 230px;
+	.nav-sections {
+		padding: 0;
 	}
 
 	.nav-sections__listitem {
@@ -125,4 +93,58 @@
 			position: relative;
 		}
 	}
+
+	.section-start {
+		margin: 0 0 20px;
+		width: auto;
+	}
+
+	.section-start__body {
+		min-height: 0;
+		font-size: 14px;
+		padding: 16px 22px 42px;
+	}
+
+	.section-start__headline {
+		height: 35px;
+		line-height: 35px;
+	}
+
+	.section-start {
+		&:after {
+			height: 18px;
+		}
+	}
+
+	.section-team__member {
+		width: 49.5%;
+
+		&:nth-child(2n+1) { // every second
+			margin-right: 0;
+		}
+	}
+
+	.Listing-results {
+		min-height: 0;
+	}
+
+
+	// Footer ######################################
+
+	.footer-main {
+		padding-top: 80px;
+	}
+
+	.footer-main__firstrow {
+		height: auto;
+	}
+
+	.Social-media {
+		margin-bottom: 20px
+	}
+
+	.newsletter-subscribe__submit {
+		width: 230px;
+	}
+
 }
