Add generic flash message styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@
 @import "modules/listing-offers";
 @import "modules/map";
 @import "modules/popup-content";
+@import "modules/flash-message";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
