--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -6,7 +6,7 @@
 
 @include breakpoint(XL) {
 
-	@include mqindicator('XL'); // debug, @TODO: comment
+	//@include mqindicator('XL');
 
 
 	// Header ######################################
