--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -3,4 +3,4 @@
   = f.input :search_location, label: true, input_html: { value: geoloc_to_s, class: 'input-xlg JS-Search-location-display', placeholder: 'in...' }
   = f.input :generated_geolocation, as: :hidden, input_html: { class: 'JS-Search-location', value: default_geolocation }
   = f.input :tags, as: :hidden
-  button.main-search__submit
+  button.main-search__submit Suchen
